--- a/views/login.hbs
+++ b/views/login.hbs
@@ -2,13 +2,13 @@
 <div class="row">
     <div class="col-4"></div>
     <div class="col-4">
-        <form action="/action_page.php">
+        <form action="/login_admin" method="POST">
         <div class="form-group">
             
-            <input type="text" class="form-control" placeholder="Login" id="login">
+            <input type="text" class="form-control" name="login" placeholder="Login" id="login">
         </div>
         <div class="form-group">
-            <input type="password" class="form-control" placeholder="Password" id="pwd">
+            <input type="password" class="form-control" name="password" placeholder="Password" id="pwd">
         </div>
         
         <button type="submit" class="btn btn-primary mx-auto">Kirish</button>
