--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -1,3 +1,7 @@
+{{#if isAdminPanel}}
+
+
+{{else}}
 <nav class="navbar navbar-expand-sm bg-primary navbar-dark">
 
   <ul class="navbar-nav">
@@ -6,7 +10,13 @@
     {{!-- <input class="form-control mr-sm-2" type="text" placeholder="Izlash"> --}}
     </form>
     <li class="nav-item"><button type="button" class="btn btn-warning text-white"><a href="/elon_berish" class="text-white"><i class="fa fa-plus"></i> E'lon berish</a></button></li>
-     <li class="nav-item"><a class="nav-link text-white" href="#">Savol va javoblar</a></li>
+     {{#if isAuth}}
+     <li class="nav-item"><a class="nav-link text-white" href="/admin_panel">Admin panel</a></li>
+     <li class="nav-item"><a class="nav-link text-white" href="/logout">Tizimdan chiqish</a></li>
+     {{else}}
      <li class="nav-item"><a class="nav-link text-white" href="/login">Tizimga kirish</a></li>
+     {{/if}}
   </ul>
 </nav>
+
+{{/if}}
