sorted approved elonlar

--- a/views/elon_berish.hbs
+++ b/views/elon_berish.hbs
@@ -67,7 +67,10 @@
         <label class="form-check-label">
             <input type="radio" class="form-check-input" name="optradio" required="true" value="offline">Offline
         </label>
-        </div>    
+        </div>  
+        <div class="form-group">
+            <input type="text" class="form-control" name="link" placeholder="link kiriting" id="link">
+        </div>  
 
         <h5 class="mt-5">Tashkilotchi</h5>
 
