--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -10,6 +10,7 @@
    display: inline-block;
 }
 
+
 </style>
 <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.1/dist/jquery.slim.min.js"></script>
 
@@ -36,4 +37,38 @@
         {
             console.log($('.hiddenOptions select.active').val());
         }
+
+                
+        function myFunction1() {
+        var checkBox = document.getElementById("myCheck1");
+        var text = document.getElementById("text1");
+        if (checkBox.checked == true){
+            text.style.display = "block";
+        } else {
+            text.style.display = "none";
+        }
+        }
+
+        function myFunction2() {
+        var checkBox = document.getElementById("myCheck2");
+        var text = document.getElementById("text2");
+        if (checkBox.checked == true){
+            text.style.display = "block";
+        } else {
+            text.style.display = "none";
+        }
+        }
+
+        function myFunction3() {
+        var checkBox = document.getElementById("myCheck3");
+        var text = document.getElementById("text3");
+        if (checkBox.checked == true){
+            text.style.display = "block";
+        } else {
+            text.style.display = "none";
+        }
+        }
+
+
+        
 </script>
