--- a/views/elon_berish.hbs
+++ b/views/elon_berish.hbs
@@ -10,12 +10,12 @@
             
             <div class="form-group col-6">
             <label for="date">O'tkaziladigan sanani kiriting:</label>
-            <input type="date" class="form-control" name="date" placeholder="dd-mm-yyyy" id="date" required="true">
+            <input type="text" class="form-control" name="date" placeholder="yyyy-mm-dd" id="date" >
             </div>
 
             <div class="form-group col-4">
             <label for="time">vaqtni kiriting:</label>
-            <input type="time" class="form-control" name="time" placeholder="14:00" id="time" required="true">
+            <input type="text" class="form-control" name="time" placeholder="14:00" id="time" >
             </div>
             <div class="col-2"></div>
         </div>
@@ -81,7 +81,7 @@
         
         <div class="form-group">
             <label for="phone">Telefon raqam:</label>
-            <input type="text" class="form-control" name="phone" placeholder="+998" id="phone" required="true">
+            <input type="text" class="form-control" name="phone" placeholder="+998991234567" id="phone" required="true">
         </div>
 
         <h5 class="mt-4">Post</h5>
